--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,7 +29,10 @@
         color: #008C9E;
     }
     .text-orange {
-        color: #F08015;
+        color: #FC9732;
+    }
+    .hover\:text-orange:hover {
+        color: #FC9732;
     }
 }
 
