added all section in cosbog page waiting for fix bug in carousel

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,6 +22,9 @@
     .bg-primary {
         background-color: #008C9E;
     }
+    .bg-secondary {
+        background-color: #FC9732;
+    }
     .text-primary {
         color: #008C9E;
     }
