edited some page and added jelpc services page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,6 +43,9 @@
     .section-title {
         @apply text-3xl font-bold text-[#303030] text-center;
     }
+    .jelpc-primary {
+        @apply text-[#C44848] font-semibold text-2xl;
+    }
 }
 
 
